configs/external/main-site/testing/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: cd-example-path
  annotations:
    konghq.com/strip-path: "true"
spec:
  parentRefs:
  - name: kong
    namespace: kong
  hostnames:
  
    - "back2future.kongproxy.me"
  rules:
  - matches:
      path:
        type: PathPrefix
        value: "/test"
    backendRefs:
    - name: main-site-nginx
      kind: Service
      port: 80
